--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,5 +5,34 @@
 html, body {
 	margin: 0;
 	padding: 0;
-	background-color: #000;
+	background-color: #999;
+	text-align:center;
+	font-family:helvetica, sans-serif;
+	h1{
+		font-size:50px;
+		padding:10px 0;
+	}
+	#inputWrapper{
+		h2{
+			font-size:20px;
+			padding:5px 0;
+		}
+	}
+	#gridWrapper{
+		margin:10px auto 0 auto;
+		ul.towerGrid{
+			clear:both;
+			li{
+				margin:1px;
+				float:left;
+				line-height:50px;
+				width:50px;
+				height:50px;
+				color:#9f9f9f;
+				background:#000;
+			}
+		}
+	}
+	
+	
 }
