--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,11 +3,44 @@
 @import "compass/reset";
 
 html, body {
+	position:relative;
 	margin: 0;
 	padding: 0;
 	background-color: #999;
 	text-align:center;
 	font-family:helvetica, sans-serif;
+	ul.box{
+		position:absolute;
+		padding:3px 0 3px 2px;
+		height:27px;
+		width:137px;
+		z-index:2;
+		background:#555;
+		display:none;
+		border-radius:3px;
+		.triangle {
+			position:absolute;
+			width:0; 
+			height:0;
+			top:-9px;
+			left:62px;
+			border-bottom:9px solid #555;
+			border-left:8px solid transparent;
+			border-right:8px solid transparent; 
+			z-index:3;
+		}
+		li{
+			float:left;
+			height:25px;
+			width:25px;
+			margin:1px;
+			background:#777;
+			line-height:26px;
+		}
+	}
+	.clear{
+		clear:both;
+	}
 	h1{
 		font-size:50px;
 		padding:10px 0;
